# emimesh

./: .gitignore  LICENSE  cappilary2.yml  cappilary3.yml  config.yml  cortical_mm3.yml  cortical_mm3_capillary.yml  profile.py  pyproject.toml  readme.md
.github/workflows/: test_conda.yml
config_files/: astrocyte1.yml  cappilary1.yml  cappilary2.yml  cappilary3.yml  cappilary4.yml  cappilary5.yml  cappilary6.yml  cappilary7.yml  cappillary5.yml  cappillary6.yml  cortical_mm3.yml  motta2019.yml  test.yml
ex3/: config.v8+.yaml  config.yaml
src/emimesh/: download_data.py  evaluate_mesh.py  extract_surfaces.py  generate_analysis_plots.py  generate_mesh.py  generate_screenshot.py  process_image_data.py  seperate_touching_cells.py  utils.py
src/emimesh/clients/: analysis_plot.py  download_data.py  evaluate_mesh.py  extract_surfaces.py  generate_mesh.py  generate_screenshot.py  generate_surface_tags.py  process_image_data.py
tests/: conftest.py  test_extract_surfaces.py  test_process_image_data.py  test_utils.py
workflow/: Snakefile
workflow/envs/: environment.yml  nbmorph_env.yml  pycle_env.yml
workflow/scripts/: cle_patch.py  download_data.py  evaluate_mesh.py  extract_surfaces.py  generate_analysis_plots.py  generate_mesh.py  generate_screenshot.py  generate_surface_tags.py  k3d_headless.py  overview_table.py  plot_utils.py  process_image_data.py  process_image_data_opencl.py  profile_pycle.py  utils.py
