[build-system] # Require setuptool version due to https://github.com/pypa/setuptools/issues/2938
requires = ["setuptools>=61.0.0", "wheel"]

[project]
dependencies = [
    "matplotlib",
    "pyvista",
    "scikit-image",
    "meshio",
    "dask-image",
    "seaborn",
    "pyacvd",
    "pytetwild",
    "fastremap",
    "cloud-volume",
    "connected-components-3d",
    "cmocean",
    "nbmorph",
]
name = "EMIMesh"
version = "1.0.0.dev0"
description = "Generating high-quality extracellular-membrane-intracellular meshes from imaging data"
authors = [{ name = "Marius Causemann", email = "mariusca@simula.no" }]
license = { file = "LICENSE" }
readme = "readme.md"


[project.scripts]
emi-generate-mesh = "emimesh.clients.generate_mesh:main"
emi-download-data = "emimesh.clients.download_data:main"
emi-evaluate-mesh = "emimesh.clients.evaluate_mesh:main"
emi-extract-surfaces = "emimesh.clients.extract_surfaces:main"
emi-plot-analysis = "emimesh.clients.analysis_plot:main"
emi-process-image-data = "emimesh.clients.process_image_data:main"
emi-generate-screenshot = "emimesh.clients.generate_screenshot:main"

[project.optional-dependencies]
test = []
dev = ["pdbpp", "ipython", "mypy", "ruff"]
webknossos = ["webknossos"]
docs = [
    "jupyter-book<2.0.0",
    "jupytext",
    "ipykernel<7.0.0",     # Note: Remove once https://github.com/ipython/ipykernel/issues/1450 is in a release
    "sphinx-codeautolink",
]
all = ["EMIMesh[test,dev,docs]"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
testpaths = ["tests"]

[tool.mypy]
ignore_missing_imports = true
# Folders to exclude
exclude = ["docs/", "build/"]
# Folder to check with mypy
files = ["src", "tests"]

[tool.ruff]
src = ["src", "tests", "docs"]
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I001",
]


[tool.ruff.lint.isort]
known-first-party = ["EMIMesh"]
known-third-party = ["numpy", "pytest"]
section-order = [
    "future",
    "standard-library",
    "mpi",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.isort.sections]
"mpi" = ["mpi4py", "petsc4py"]
